# NoMarkup

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PLAN.md  PRD.md  ProjectSetup.md  docker-compose.yml  plan1.md
.claude/: settings.json
.claude/hooks/: post-write-format.sh  post-write-lint.sh  validate-api-patterns.sh  validate-bash.sh  validate-database.sh  validate-dependencies.sh  validate-env-usage.sh  validate-file-write.sh  validate-payment.sh  validate-react-patterns.sh  validate-test-patterns.sh
.github/workflows/: ci.yml  deploy.yml
database/: go.mod
database/cmd/seed/: main.go
database/migrations/: 001_initial_schema.down.sql  001_initial_schema.up.sql  002_seed_taxonomy.down.sql  002_seed_taxonomy.up.sql  003_device_tokens.up.sql  004_review_flags.down.sql  004_review_flags.up.sql
deploy/docker/: bidding.Dockerfile  chat.Dockerfile  engine.Dockerfile  engines.Dockerfile  fraud.Dockerfile  gateway.Dockerfile  imaging.Dockerfile  job.Dockerfile  notification.Dockerfile  payment.Dockerfile  service.Dockerfile  trust.Dockerfile  user.Dockerfile  web.Dockerfile
deploy/k8s/base/: ingress.yaml  kustomization.yaml  namespace.yaml
docs/: auth-flow.md  implementation-playbook.md  page-component-spec.md  route-map.md  state-management.md  test-fixtures.md
engines/: Cargo.toml
engines/bidding/: Cargo.toml  build.rs
engines/bidding/benches/: bidding_bench.rs
engines/bidding/src/: engine.rs  grpc.rs  lib.rs  main.rs  models.rs
engines/fraud/: Cargo.toml  build.rs
engines/fraud/benches/: fraud_bench.rs
engines/fraud/src/: behavioral.rs  engine.rs  grpc.rs  lib.rs  main.rs  models.rs
engines/imaging/: Cargo.toml  build.rs
engines/imaging/src/: engine.rs  grpc.rs  main.rs  models.rs
engines/trust/: Cargo.toml  build.rs
engines/trust/benches/: trust_bench.rs
engines/trust/src/: engine.rs  grpc.rs  lib.rs  main.rs  models.rs  scoring.rs
gateway/: go.mod  go.sum
gateway/cmd/server/: main.go
gateway/internal/cache/: redis.go
gateway/internal/config/: config.go
gateway/internal/handler/: admin_disputes.go  admin_jobs.go  admin_payments.go  admin_platform.go  admin_reviews.go  admin_users.go  admin_verification.go  analytics.go  auth.go  bid.go  categories.go  chat.go  contract.go  fraud.go  handler_test.go  image.go  job.go  notification.go  payment.go  provider.go  response.go  review.go  subscription.go  trust.go  user.go  webhook.go
gateway/internal/middleware/: admin.go  auth.go  cors.go  logging.go  metrics.go  middleware_test.go  ratelimit.go  (+2 more)
ml/: requirements.txt
services/chat/: go.mod  go.sum
services/job/: go.mod  go.sum
services/notification/: go.mod  go.sum
services/payment/: go.mod  go.sum
services/user/: go.mod  go.sum
tests/load/: bids.js  config.js  jobs.js  search.js  websocket.js
web/: eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vitest.config.mts
(+246 files in other folders)
