[package]
name = "nomarkup-bidding-engine"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true

[build-dependencies]
tonic-build.workspace = true

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bidding_bench"
harness = false
